Netty work.